	     should be set only after create log success.

Severity   : major
Bugzilla   : 11971
Description: Accessing a block bevice can re-enable I/O when Lustre is
	     tearing down a device.
Details    : dev_clear_rdonly(bdev) must be called in kill_bdev() instead of
	     blkdev_put().

Severity   : minor
Bugzilla   : 11706
Description: service threads may hog cpus when ther eis a lot of requests
             coming
Details    : Insert cond_resched to give other threads a chance to use some of
             the cpu

Severity   : normal
Frequency  : rare
Bugzilla   : 12086 
Description: the cat log was not initialized in recovery 
Details    : When mds(mgs) do recovery, the tgt_count might be zero, so the
	     unlink log on mds will not be initialized until mds post
	     recovery. And also in mds post recovery, the unlink log will 
	     initialization will be done asynchronausly, so there will be race
	     between add unlink log and unlink log initialization.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0